# awo-demokratiefoerderquote

./: .gitignore  .pre-commit-config.yaml  LICENSE-CODE  LICENSE-DATA  README.md  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
codebook/: Demokratiefoerderquote - Codebook.md  codebook_compact_llm.md  codebook_wo_example_links.md
data/: 2025_07_21_Tabelle_Programme_zur_Publ.xlsx  awo_coders_long.csv
data/labeled/19_06/: ls_input.csv  to_correct.csv
data/labeled/25_07/: 07_25_awo_cleanlab_correction.json  07_25_awo_coder_1.json  07_25_awo_coder_2.json  add_manually_retrieved.json  consolidated_labels_equal.csv  (+3 more)
experiments/: experiment_config.py  rb_baseline.py  tfidf_baseline.py
labelstudio/: label_cfg.xml  label_issue_cfg.xml
model_results/: bert_stats.json  combined_results.csv  fastfit_stats.csv  fastfit_stats.json  icl_mipro.csv  icl_zero_shot.csv  optuna_tf_idf_mlp.csv  rule_based.csv
model_results/opt_recall/: tfidf_mlp_recall.csv
models/: fastfit_best_params.json  icl_mipro.json  icl_zero_shot.json  optuna_tf_idf_mlp_params.json  rule_based_model.json  tfidf_mlp_recall_params.json  tfidf_mlp_results_f1_0.7656.json
notebooks/: compute_icr.qmd  exploration.ipynb  labeling_eval.ipynb
notebooks/data/: all_coders_long.csv
scripts/experiments/: main.py  optimize_recall.py
scripts/remote_models/: bert_cpt.py  bert_training.py  fastfit_model.py  translator.py
scripts/wrangling/: add_additional_manually_retrieved.py  apply_corrections.py  consolidate_label_versions.py  create_to_classify.py  finalize.py  to_excel.py  to_label_studio.py
tests/: conftest.py  test_augmentation.py  test_back_translation.py  test_compute_fold.py  test_remote_bt.py
(+11 files in other folders)
