[project]
name = "demokratiehaushalt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastexcel>=0.14.0",
    "jupyter>=1.1.1",
    "markdown>=3.8.2",
    "markdownify>=1.1.0",
    "modal>=1.1.0",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "lib",
    "click>=8.1.8",
    "bs4>=0.0.2",
    "pre-commit>=4.2.0",
    "scikit-learn==1.3.2",
    "nltk>=3.9.1",
    "cleanlab[datalab]>=2.7.1",
    "pandas>=2.3.0",
    "torch==2.6.0",
    "optuna>=4.4.0",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "rich>=14.0.0",
    "dspy>=2.6.27",
    "nlpaug>=1.1.11",
    "pytest>=8.4.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.54.0",
    "safetensors<=0.6.0rc0",
    "sacremoses>=0.1.1",
    "fastapi>=0.116.1",
    "fast-fit>=1.2.1",
    "datasets==2.19.0",
    "deepeval>=3.3.3",
    "fakeredis>=2.30.3",
    "imblearn>=0.0",
]


[tool.uv.sources]
lib   = { workspace = true }

[tool.uv.workspace]
members = ["lib"]
